frontend/tests/errors/ER-004/generic_recursion/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Generic constraint violations are reported as compile-time errors | Generic constraint violation: infinite type recursion


&recurse(x) -> #i32 {
    x;
}

&^main() -> #i32 {
    recurse("bad");
}
